--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,36 +1,81 @@
 baseURL = "https://odu-cga-cubesat.github.io/flight-software"
 title = "ODU/CGA CubeSat Flight Software"
-theme = "geekdoc"
-pygmentsUseClasses = true
+theme = "docsy"
+
+canonifyURLs = false
+
+enableRobotsTXT = true
+
+# Will give values to .Lastmod etc.
+enableGitInfo = true
+
+disableKinds = ["taxonomy", "taxonomyTerm"]
+
+# Highlighting config
 pygmentsCodeFences = true
-timeout = 180000
-pluralizeListTitles = false
+pygmentsUseClasses = false
+# Use the new Chroma Go highlighter in Hugo.
+pygmentsUseClassic = false
+#pygmentsOptions = "linenos=table"
+# See https://help.farbox.com/pygments.html
+pygmentsStyle = "tango"
 
-# Geekdoc configuration
-disablePathToLower = false
-enableGitInfo = false
+# Everything below this are Site Params
 
-# Needed for mermaid shortcodes
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe  = true
-  [markup.tableOfContents]
-    startLevel = 1
-    endLevel = 9
-  [markup.asciidocext]
-    extensions  = ["asciidoctor-diagram"]
-    workingFolderCurrent  = true
-    trace  = true
+# [params]
+# copyright = "The Docsy Authors"
+# privacy_policy = "https://policies.google.com/privacy"
 
-[params]
-  # geekdocMenuBundle = true
-  geekdocToC = 3
+# First one is picked as the Twitter card image if not set on page.
+# images = ["images/project-illustration.png"]
 
-  geekdocRepo = "https://github.com/odu-cga-cubesat/flight-software"
-  geekdocEditPath = "edit/main/docs/content"
+# Menu title if your navbar has a versions selector to access old versions of your site.
+# This menu appears only if you have at least one [params.versions] set.
+version_menu = "Releases"
 
-  geekdocSearch = true
-  geekdocSearchShowParent = true
+# Repository configuration (URLs for in-page links to opening issues and suggesting changes)
+github_repo = "https://github.com/odu-cga-cubesat/flight-software"
 
-  geekdocImageLazyLoading = true
+# Specify a value here if your content directory is not in your repo's root directory
+# github_subdir = ""
+
+# Google Custom Search Engine ID. Remove or comment out to disable search.
+gcs_engine_id = "011737558837375720776:fsdu1nryfng"
+
+# Enable Algolia DocSearch
+algolia_docsearch = false
+
+# Enable Lunr.js offline search
+offlineSearch = false
+
+# User interface configuration
+[params.ui]
+# Enable to show the side bar menu in its compact state.
+sidebar_menu_compact = false
+#  Set to true to disable breadcrumb navigation.
+breadcrumb_disable = false
+#  Set to true to hide the sidebar search box (the top nav search box will still be displayed if search is enabled)
+sidebar_search_disable = false
+#  Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top nav bar
+navbar_logo = true
+# Set to true to disable the About link in the site footer
+footer_about_disable = false
+
+# Adds a H2 section titled "Feedback" to the bottom of each doc. The responses are sent to Google Analytics as events.
+# This feature depends on [services.googleAnalytics] and will be disabled if "services.googleAnalytics.id" is not set.
+# If you want this feature, but occasionally need to remove the "Feedback" section from a single page,
+# add "hide_feedback: true" to the page's front matter.
+[params.ui.feedback]
+enable = true
+# The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
+yes = 'Glad to hear it! Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
+no = 'Sorry to hear that. Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
+
+[params.links]
+# Developer relevant links. These will show up on right side of footer and in the community page if you have one.
+[[params.links.developer]]
+	name = "GitHub"
+	url = "https://github.com/odu-cga-cubesat/flight-software"
+	icon = "fab fa-github"
+        desc = "Development takes place here!"
+
