--- a/architecture.yml
+++ b/architecture.yml
@@ -1,61 +1,98 @@
 elements:
-  1-StakeholderNeeds/1.1-Primary_Mission_Objective-1of2.yml: &ref_0
+  0-References/1-AX.25_Specification.yml: &ref_0
+    title: AX.25 Link Access Protocol for Amateur Packet Radio Version 2.2
+    url: http://www.tapr.org/pdf/AX25.2.2.pdf
+  0-References/2-CubeSat_Design_Specification_Rev._13.yml: &ref_1
+    title: CubeSat Design Specification Rev. 13
+    url: https://www.cubesat.org/s/cds_rev13_final2.pdf
+  0-References/3-PlanetarySystemsCorporationCubeSatDesignSpecificationfor3U-6U-12U.yml: &ref_2
+    title: Planetary Systems Corporation CubeSat Design Specification for 3U-6U-12U
+    url: >-
+      https://www.planetarysystemscorp.com/wp-content/uploads/2018/08/2002367F-Payload-Spec-for-3U-6U-12U.pdf
+  0-References/4-DeploymentMechanismForSmallSatellite.yml: &ref_3
+    title: Canisterized Satellite Dispenser
+    url: >-
+      https://www.planetarysystemscorp.com/wp-content/uploads/2014/07/2002337F-CSD-Data-Sheet.pdf
+  1-StakeholderNeeds/1.1-Primary_Mission_Objective-A1.yml: &ref_4
     id: 1.1
-    name: Primary Mission Objective 1/2
+    name: Primary Mission Objective A1
     statement: >-
       The SeaLion mission shall establish UHF communication link with Virginia
       ground station
     derivedFrom: []
-  1-StakeholderNeeds/1.2-Primary_Mission_Objective-2of2.yml: &ref_1
+  1-StakeholderNeeds/1.2-Primary_Mission_Objective-A2.yml: &ref_5
     id: 1.2
-    name: Primary Mission Objective 2/2
+    name: Primary Mission Objective A2
     statement: >-
       The SeaLion mission shall establish S-Band communication link with MC3
       ground station
     derivedFrom: []
-  1-StakeholderNeeds/2.1-Secondary_Mission_Objective-1of3.yml: &ref_2
+  1-StakeholderNeeds/1.3-Primary_Mission_Objective-A3.yml: &ref_6
+    id: 1.3
+    name: Primary Mission Objective A3
+    statement: >-
+      The SeaLion mission shall successfully transmit “mission data” defined
+      above to ground stations on the Earth.
+    derivedFrom: []
+  1-StakeholderNeeds/1.4-Primary_Mission_Objective-A4.yml: &ref_7
+    id: 1.4
+    name: Primary Mission Objective A4
+    statement: The SeaLion mission shall adhere to CubeSat standards as per CDS Rev. 13
+    derivedFrom: 0-References/2-CubeSat_Design_Specification_Rev._13.yml
+  1-StakeholderNeeds/2.1-Secondary_Mission_Objective-B1.yml: &ref_8
     id: 2.1
-    name: Secondary Mission Objective 1/3
+    name: Secondary Mission Objective B1
     statement: >-
       The SeaLion mission shall provide a means to validate an impedance probe
       in-orbit
     derivedFrom: []
-  1-StakeholderNeeds/2.2-Secondary_Mission_Objective-2of3.yml: &ref_3
+  1-StakeholderNeeds/2.2-Secondary_Mission_Objective-B2.yml: &ref_9
     id: 2.2
-    name: Secondary Mission Objective 2/3
+    name: Secondary Mission Objective B2
     statement: >-
       The SeaLion mission shall provide a means to validate a V-Infrared Sensor
       (VIR-S) in-orbit
     derivedFrom: []
-  1-StakeholderNeeds/2.3-Secondary_Mission_Objective-3of3.yml: &ref_4
+  1-StakeholderNeeds/2.3-Secondary_Mission_Objective-B3.yml: &ref_10
     id: 2.3
-    name: Secondary Mission Objective 3/3
+    name: Secondary Mission Objective B3
     statement: >-
       The SeaLion mission shall provide a means to validate a deployable
       composite structure (DeCS) in-orbit
     derivedFrom: []
-  1-StakeholderNeeds/3.1-Tertiary_Mission_Objective-1of3.yml: &ref_5
+  1-StakeholderNeeds/3.1-Tertiary_Mission_Objective-C1.yml: &ref_11
     id: 3.1
-    name: Tertiary Mission Objective 1/3
+    name: Tertiary Mission Objective C1
     statement: The SeaLion mission shall qualify a newly developed antenna
     derivedFrom: []
-  1-StakeholderNeeds/3.2-Tertiary_Mission_Objective-2of3.yml: &ref_6
+  1-StakeholderNeeds/3.2-Tertiary_Mission_Objective-C2.yml: &ref_12
     id: 3.2
-    name: Tertiary Mission Objective 2/3
+    name: Tertiary Mission Objective C2
     statement: >-
       The SeaLion mission shall qualify a CubeSat bus architecture for very-low
       Earth orbit (VLEO)
     derivedFrom: []
-  1-StakeholderNeeds/3.3-Tertiary_Mission_Objective-3of3.yml: &ref_7
+  1-StakeholderNeeds/3.3-Tertiary_Mission_Objective-C3.yml: &ref_13
     id: 3.3
-    name: Tertiary Mission Objective 3/3
+    name: Tertiary Mission Objective C3
     statement: >-
       The SeaLion shall verify DeCS in-orbit behavior performance via
       accelerometer & temperature sensor data
     derivedFrom: []
+  2-UserStories/1-PingSatellite.yml: &ref_14
+    id: 1
+    name: Ping Satellite
+    actor: Ground Station Operator
+    behavior: Ping satellite
+    rationale: Establish communication link with satellite
+    derivedFrom:
+      - 1-StakeholderNeeds/1.1-Primary_Mission_Objective-A1.yml
+    example: >-
+      Ping the satellite in order to establish UHF communication link with
+      Virginia ground station
 package:
   name: sealion
-  version: 0.1.0
+  version: 0.4.0
   description: SeaLion Mission Concept of Operations (ConOps)
   keywords:
     - cubesat
@@ -69,13 +106,22 @@ package:
     js-yaml: ^3.12.0
     liquidjs: ^6.1.1
     minimist: ^1.2.0
-generationDate: 8/5/2021
-1-StakeholderNeeds:
+generationDate: 8/28/2021
+0-References:
   - *ref_0
   - *ref_1
   - *ref_2
   - *ref_3
+1-StakeholderNeeds:
   - *ref_4
   - *ref_5
   - *ref_6
   - *ref_7
+  - *ref_8
+  - *ref_9
+  - *ref_10
+  - *ref_11
+  - *ref_12
+  - *ref_13
+2-UserStories:
+  - *ref_14
