--- a/architecture.yml
+++ b/architecture.yml
@@ -13,73 +13,77 @@ elements:
     title: Canisterized Satellite Dispenser
     url: >-
       https://www.planetarysystemscorp.com/wp-content/uploads/2014/07/2002337F-CSD-Data-Sheet.pdf
-  1-StakeholderNeeds/1.1-Primary_Mission_Objective-A1.yml: &ref_4
+  0-References/5-ITAR_Compliance.yml: &ref_4
+    title: ITAR Compliance Guide
+    url: >-
+      https://research.mit.edu/integrity-and-compliance/export-control/information-documents/my-satellite-itar-or-ear
+  1-StakeholderNeeds/1.1-Primary_Mission_Objective-A1.yml: &ref_5
     id: 1.1
     name: Primary Mission Objective A1
     statement: >-
       The SeaLion mission shall establish UHF communication link with Virginia
       ground station
     derivedFrom: []
-  1-StakeholderNeeds/1.2-Primary_Mission_Objective-A2.yml: &ref_5
+  1-StakeholderNeeds/1.2-Primary_Mission_Objective-A2.yml: &ref_6
     id: 1.2
     name: Primary Mission Objective A2
     statement: >-
       The SeaLion mission shall establish S-Band communication link with MC3
       ground station
     derivedFrom: []
-  1-StakeholderNeeds/1.3-Primary_Mission_Objective-A3.yml: &ref_6
+  1-StakeholderNeeds/1.3-Primary_Mission_Objective-A3.yml: &ref_7
     id: 1.3
     name: Primary Mission Objective A3
     statement: >-
       The SeaLion mission shall successfully transmit “mission data” defined
       above to ground stations on the Earth.
     derivedFrom: []
-  1-StakeholderNeeds/1.4-Primary_Mission_Objective-A4.yml: &ref_7
+  1-StakeholderNeeds/1.4-Primary_Mission_Objective-A4.yml: &ref_8
     id: 1.4
     name: Primary Mission Objective A4
     statement: The SeaLion mission shall adhere to CubeSat standards as per CDS Rev. 13
     derivedFrom: 0-References/2-CubeSat_Design_Specification_Rev._13.yml
-  1-StakeholderNeeds/2.1-Secondary_Mission_Objective-B1.yml: &ref_8
+  1-StakeholderNeeds/2.1-Secondary_Mission_Objective-B1.yml: &ref_9
     id: 2.1
     name: Secondary Mission Objective B1
     statement: >-
       The SeaLion mission shall provide a means to validate an impedance probe
       in-orbit
     derivedFrom: []
-  1-StakeholderNeeds/2.2-Secondary_Mission_Objective-B2.yml: &ref_9
+  1-StakeholderNeeds/2.2-Secondary_Mission_Objective-B2.yml: &ref_10
     id: 2.2
     name: Secondary Mission Objective B2
     statement: >-
       The SeaLion mission shall provide a means to validate a V-Infrared Sensor
       (VIR-S) in-orbit
     derivedFrom: []
-  1-StakeholderNeeds/2.3-Secondary_Mission_Objective-B3.yml: &ref_10
+  1-StakeholderNeeds/2.3-Secondary_Mission_Objective-B3.yml: &ref_11
     id: 2.3
     name: Secondary Mission Objective B3
     statement: >-
       The SeaLion mission shall provide a means to validate a deployable
       composite structure (DeCS) in-orbit
     derivedFrom: []
-  1-StakeholderNeeds/3.1-Tertiary_Mission_Objective-C1.yml: &ref_11
+  1-StakeholderNeeds/3.1-Tertiary_Mission_Objective-C1.yml: &ref_12
     id: 3.1
     name: Tertiary Mission Objective C1
     statement: The SeaLion mission shall qualify a newly developed antenna
     derivedFrom: []
-  1-StakeholderNeeds/3.2-Tertiary_Mission_Objective-C2.yml: &ref_12
+  1-StakeholderNeeds/3.2-Tertiary_Mission_Objective-C2.yml: &ref_13
     id: 3.2
     name: Tertiary Mission Objective C2
     statement: >-
       The SeaLion mission shall qualify a CubeSat bus architecture for very-low
       Earth orbit (VLEO)
     derivedFrom: []
-  1-StakeholderNeeds/3.3-Tertiary_Mission_Objective-C3.yml: &ref_13
+  1-StakeholderNeeds/3.3-Tertiary_Mission_Objective-C3.yml: &ref_14
     id: 3.3
     name: Tertiary Mission Objective C3
     statement: >-
       The SeaLion shall verify DeCS in-orbit behavior performance via
       accelerometer & temperature sensor data
     derivedFrom: []
-  2-UserStories/1-PingSatellite.yml: &ref_14
+  2-UserStories/1-PingSatellite.yml: &ref_15
     id: 1
     name: Ping Satellite
     actor: Ground Station Operator
@@ -90,7 +94,7 @@ elements:
     example: >-
       Ping the satellite in order to establish UHF communication link with
       Virginia ground station
-  2-UserStories/2-ViewSatelliteHealthDataPacket.yml: &ref_15
+  2-UserStories/2-ViewSatelliteHealthDataPacket.yml: &ref_16
     id: 2
     name: View Satellite Health Data Packet
     actor: Ground Station Operator
@@ -103,25 +107,25 @@ elements:
     example: >-
       View satellite satellite health data packet in order to validate the
       mission data of the IP and DeCS payloads
-  2-UserStories/2.1-QuerySatelliteHealthDataPacket.yml: &ref_16
+  2-UserStories/2.1-QuerySatelliteHealthDataPacket.yml: &ref_17
     id: 2.1
     name: Query Satellite Health Data Packet
     actor: Ground Station Operator
     behavior: Send satellite health data packet downlink command
     rationale: Request satellite health data packet
     derivedFrom:
-      - 2-ViewSatelliteHealthDataPacket.yml
+      - 2-UserStories/2-ViewSatelliteHealthDataPacket.yml
     example: >-
       Send satellite health data packet downlink command in order to aquire
       satellite health data packet downlink
-  2-UserStories/2.2-ListenForSatelliteBeacon.yml: &ref_17
+  2-UserStories/2.2-ListenForSatelliteBeacon.yml: &ref_18
     id: 2.2
     name: Listen for Satellite Beacon
     actor: Ground Station Operator
     behavior: Open ground station beacon monitor
     rationale: View satellite health data packet
     derivedFrom:
-      - 2-ViewSatelliteHealthDataPacket.yml
+      - 2-UserStories/2-ViewSatelliteHealthDataPacket.yml
     example: >-
       Open ground station beacon monitor to listen for satellite health data
       packet downlink
@@ -147,8 +151,8 @@ generationDate: 9/2/2021
   - *ref_1
   - *ref_2
   - *ref_3
-1-StakeholderNeeds:
   - *ref_4
+1-StakeholderNeeds:
   - *ref_5
   - *ref_6
   - *ref_7
@@ -158,8 +162,9 @@ generationDate: 9/2/2021
   - *ref_11
   - *ref_12
   - *ref_13
-2-UserStories:
   - *ref_14
+2-UserStories:
   - *ref_15
   - *ref_16
   - *ref_17
+  - *ref_18
